# docs-emdros

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README.md  configure.ac  rmfiles.sh
doc/: Makefile.am
doc/importtool/: Makefile.am
doc/latex/Ideas/Additions-to-emdf-and-mql-2019/: Makefile  desiderata.tex
doc/latex/conversion-of-MQL-Programmers-Guide/: MQL-Programmers-Guide.tex  MQL.html  MQL.md  MQL1.html  MQL1.md  MQL1.tex  Makefile  convlatex.py  convmd.py  header.html
doc/lyx/: MQL-Programmers-Guide.lyx  TheDoor.eps  TheDoor.xcf
doc/markdown/mqlref/: mkdocs.yml
doc/markdown/mqlref/docs/: index.md
doc/markdown/mqlref/docs/about/: acknowledgements.md
doc/markdown/mqlref/docs/emdf/: computedfeatures.md  databases.md  encryption.md  enumerations.md  example.md  features.md  index.md  monads.md  monadsets.md  objects.md  objectttypes.md  otherconcepts.md
doc/markdown/mqlref/docs/mql/data/globaldata/: selectmaxm.md  selectminm.md
doc/markdown/mqlref/docs/mql/data/monadsets/: createmonadset.md  dropmonadset.md  getmonadsets.md  monadsetcalculation.md  selectmonadsets.md  updatemonadset.md
doc/markdown/mqlref/docs/mql/data/objects/: createobjectfromidds.md  createobjectfrommonads.md  createobjectswithobjecttype.md  deleteobjectsbyidds.md  deleteobjectsbymonads.md  getaggregatefeatures.md  getfeatures.md  getmonads.md  getobjectshavingmonadsin.md  getsetfromfeature.md  selectallobjects.md  selectobjectsat.md  selectobjectshavingmonadsin.md  updateobjectsbyidds.md  updateobjectsbymonads.md
doc/markdown/mqlref/docs/mql/meta/: aborttransaction.md  begintransaction.md  committransaction.md  quit.md
doc/markdown/mqlref/docs/mql/schema/: index.md
doc/markdown/mqlref/docs/mql/schema/databases/: createdatabase.md  dropdatabase.md  initializedatabase.md  usedatabase.md  vacuumdatabase.md
doc/markdown/mqlref/docs/mql/schema/enumerations/: createenumeration.md  dropenumeration.md  updateenumeration.md
doc/markdown/mqlref/docs/mql/schema/indexes/: createindexes.md  dropindexes.md
doc/markdown/mqlref/docs/mql/schema/introspection/: selectenumerationconstants.md  selectenumerations.md  selectfeatures.md  selectobjecttypes.md  (+1 more)
doc/markdown/mqlref/docs/mql/topographic/: index.md
doc/markdown/mqlref/docs/preliminaries/: bnf.md  index.md  lexicalconventions.md  origins.md  returnstypes.md
doc/markdown/progref/: mkdocs.yml
doc/markdown/progref/docs/: architecture.md  index.md  modelandquerylanguage.md  usecases.md  whatisemdros.md
doc/markdown/progref/docs/about/: license.md
doc/markdown/progref/docs/patterns/: index.md  ingestion.md
doc/markdown/scripts/: mkpages.py
doc/progref/: Content.txt
doc/querytool/: Makefile.am
doc/scripts/mqlgrammar/: mql_grammar.txt  read_grammar.py
(+9 files in other folders)
